@@ -3,15 +3,12 @@ package ru.itgirl.checklistproject.model.service;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import ru.itgirl.checklistproject.model.dto.AnswerDto;
-import ru.itgirl.checklistproject.model.dto.QuestionCreateDto;
 import ru.itgirl.checklistproject.model.dto.QuestionDto;
-import ru.itgirl.checklistproject.model.dto.QuestionUpdateDto;
 import ru.itgirl.checklistproject.model.entity.Question;
-import ru.itgirl.checklistproject.model.repository.LevelRepository;
 import ru.itgirl.checklistproject.model.repository.QuestionRepository;
-import ru.itgirl.checklistproject.model.repository.SuggestionRepository;
 
 import java.util.List;
+import java.util.NoSuchElementException;
 import java.util.stream.Collectors;
 
 @Service
@@ -19,57 +16,15 @@ import java.util.stream.Collectors;
 public class QuestionServiceImpl implements QuestionService {
 
     private final QuestionRepository questionRepository;
-    private final SuggestionService suggestionService;
-    private final LevelRepository levelRepository;
-    private final SuggestionRepository suggestionRepository;
-    private final AnswerService answerService;
-
-    @Override
-    public List<QuestionDto> getAllQuestions() {
-        List<Question> questions = questionRepository.findAll();
-        return questions.stream().map(this::convertEntityToDto).collect(Collectors.toList());
-    }
 
     @Override
     public QuestionDto getQuestionById(Long id) {
-        return convertEntityToDto(questionRepository.findById(id).orElseThrow());
-    }
-
-    @Override
-    public List<QuestionDto> getQuestionsByIncluded(boolean included) {
-        List<Question> questions = questionRepository.findQuestionsByIncluded(included);
-        return questions.stream()
-                .map(this::convertEntityToDto)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public QuestionDto createQuestion(QuestionCreateDto questionCreateDto) {
-        Question question = questionRepository.save(convertDtoToEntity(questionCreateDto));
-        return convertEntityToDto(question);
-    }
-
-    @Override
-    public QuestionDto updateQuestion(QuestionUpdateDto questionUpdateDto) {
-        Question question = questionRepository.findById(questionUpdateDto.getId()).orElseThrow();
-        question.setText(questionUpdateDto.getText());
-        question.setLevel(levelRepository.findLevelByName(questionUpdateDto.getLevel()));
-        question.setIncluded(questionUpdateDto.isIncluded());
-        Question savedQuestion = questionRepository.save(question);
-        return convertEntityToDto(savedQuestion);
+        return convertEntityToDto(questionRepository.findById(id).orElseThrow(() -> new NoSuchElementException("This question does not exist")));
     }
 
     @Override
     public void deleteQuestion(Long id) {
         questionRepository.deleteById(id);
-    }
-
-    public Question convertDtoToEntity(QuestionCreateDto questionCreateDto) {
-        return Question.builder()
-                .text(questionCreateDto.getText())
-                .included(questionCreateDto.getIncluded())
-                .level(levelRepository.findLevelByName(questionCreateDto.getLevel()))
-                .build();
     }
 
     private QuestionDto convertEntityToDto(Question question) {
@@ -79,12 +34,10 @@ public class QuestionServiceImpl implements QuestionService {
                     .map(answer -> AnswerDto.builder()
                             .id(answer.getId())
                             .answerText(answer.getText())
-                            .correct(answer.isCorrect()).build()).toList();
+                            .correct(answer.isCorrect()).build()).collect(Collectors.toList());
         }
         return QuestionDto.builder()
                 .id(question.getId())
-                .level(question.getLevel().getName())
-                .included(question.getIncluded())
                 .text(question.getText())
                 .answers(answers)
                 .build();
